[workspace]
members = [
    "bin",
    "lib/*",
]
resolver = "2"

[workspace.dependencies]
thiserror = { version = "1.0" }
itertools = "0.10"
pretty_assertions = "1.2"
log = { version = "0.4", features = ["release_max_level_off"] }
env_logger = "0.11"
ctor = "0.2"
derive_more = "0.99.17"
criterion = "0.5"

[profile.release]
lto = "thin"

[profile.bench]
lto = "thin"
