[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
instructions = { path = "../instructions" }
scanner = { path = "../scanner" }
cursor = { path = "../cursor" }
errors = { path = "../errors" }
gc = { path = "../gc" }
thiserror.workspace = true
log.workspace = true
num_enum = "0.6.1"
derive_more.workspace = true
