[package]
name = "interpreter"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/interpreter.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser.path = "../parser"
scanner.path = "../scanner"
errors.path = "../errors"
thiserror.workspace = true
