[package]
name = "parser"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/parser.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scanner = { path = "../scanner" }
errors = { path = "../errors" }
thiserror.workspace = true

[dev-dependencies]
cursor = { path = "../cursor" }
