[package]
name = "scanner"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/scanner.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# strict conformance with the lox specification to pass the official test suite.
# Will disable any challenges/extra features and also provide less information in some error messages.
strict = []

[dependencies]
thiserror.workspace = true
itertools.workspace = true
pretty_assertions.workspace = true

strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24.3"

cursor = { path = "../cursor" }
